spacing and line-height fixed

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,16 @@
   --fs-nav: var(--fs-500);
   --fs-button: var(--fs-300);
 
+  --size-100: .25rem;
+  --size-200: .5rem;
+  --size-300: .75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 3rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
+
 }
 
 @media (min-width: 50em) {
@@ -179,35 +189,46 @@ svg {
 
 .fs-primary-heading {
   font-size: var(--fs-primary-heading);
+  line-height: 1.1;
 }
 
 .fs-secondary-heading {
   font-size: var(--fs-secondary-heading);
+  line-height: 1.1;
 }
 
 
 /* FONT SIZE UTILITY CLASSES THAT DOES NOT CHANGE WITH SCREEN SIZE */
 
-.fs-300{
+.fs-300 {
   font-size: var(--fs-300);
 }
 
-.fs-400{
+.fs-400 {
   font-size: var(--fs-400);
 }
 
-.fs-500{
+.fs-500 {
   font-size: var(--fs-500);
 }
 
-.fs-600{
+.fs-600 {
   font-size: var(--fs-600);
 }
 
+/* Spacing utility classes */
+
+.padding-block-900{
+  padding-block: var(--size-900);
+}
+
+.padding-block-700{
+  padding-block: var(--size-700);
+}
 
 /* Layout utility classes */
 
-.container{
+.container {
   --max-width: 1110px;
   --padding: 1rem;
 
@@ -216,37 +237,28 @@ svg {
   border: 1px solid red;
 }
 
-.even-columns{
+.even-columns {
   display: grid;
   gap: 1rem;
   border: 2px solid green;
 }
 
-@media(min-width: 50em){
+@media(min-width: 50em) {
 
-  .even-columns{
+  .even-columns {
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
   }
 
 }
-  
-
-
-
 
 
 
 
 /* GENERAL STYLING */
 
-body{
+body {
   font-size: var(--fs-body);
   font-family: var(--ff-body);
   color: var(--clr-primary-400);
 }
-
-
-
-
-
